--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -11929,6 +11929,10 @@ video {
   z-index: auto;
 }
 
+.-z-10 {
+  z-index: -10;
+}
+
 .gap-0 {
   grid-gap: 0;
   gap: 0;
@@ -25705,6 +25709,10 @@ video {
 
   .sm\:z-auto {
     z-index: auto;
+  }
+
+  .sm\:-z-10 {
+    z-index: -10;
   }
 
   .sm\:gap-0 {
@@ -39486,6 +39494,10 @@ video {
     z-index: auto;
   }
 
+  .md\:-z-10 {
+    z-index: -10;
+  }
+
   .md\:gap-0 {
     grid-gap: 0;
     gap: 0;
@@ -53265,6 +53277,10 @@ video {
     z-index: auto;
   }
 
+  .lg\:-z-10 {
+    z-index: -10;
+  }
+
   .lg\:gap-0 {
     grid-gap: 0;
     gap: 0;
@@ -67042,6 +67058,10 @@ video {
 
   .xl\:z-auto {
     z-index: auto;
+  }
+
+  .xl\:-z-10 {
+    z-index: -10;
   }
 
   .xl\:gap-0 {
